erDiagram
    %% Owner Level
    OWNER ||--o{ ADMIN : manages
    OWNER ||--o{ STORE : oversees
    
    %% Core Business Structure
    STORE ||--o{ LOCATION : has
    STORE ||--o{ USER : has
    STORE ||--o{ SUBSCRIPTION : has
    ADMIN ||--o{ STORE : manages

    %% Location Relations
    LOCATION ||--o{ CATEGORY : has
    LOCATION ||--o{ ORDER : processed_at
    LOCATION ||--o{ EMPLOYEE : assigned_to

    %% Product Structure
    CATEGORY ||--o{ ITEM : contains
    ITEM ||--o{ ORDER_ITEM : includes
    
    %% Order Structure
    ORDER ||--o{ ORDER_ITEM : contains

    OWNER {
        int id PK
        string full_name
        string user_name
        string phone
        string email
        string password_hash
        datetime last_login
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    ADMIN {
        int id PK
        int owner_id FK
        string full_name
        string user_name
        string phone
        string email
        string password_hash
        datetime last_login
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    STORE {
        int id PK
        int admin_id FK
        int owner_id FK
        string name
        string address
        string contact_number
        string registration_number
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    SUBSCRIPTION {
        int id PK
        int store_id FK
        date start_date
        date end_date
        decimal amount
        string payment_status
        datetime last_payment_date
        datetime next_billing_date
        datetime created_at
        datetime updated_at
    }

    USER {
        int id PK
        int store_id FK
        int location_id FK
        string full_name
        string user_name
        string email
        string phone
        string password_hash
        string role
        boolean is_active
        datetime last_login
        datetime created_at
        datetime updated_at
    }

    EMPLOYEE {
        int id PK
        int store_id FK
        int location_id FK
        string full_name
        string phone
        string position
        string email
        date hire_date
        boolean is_active
        decimal salary
        string employment_status
        datetime created_at
        datetime updated_at
    }

    LOCATION {
        int id PK
        int store_id FK
        string name
        string address
        string contact_number
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    CATEGORY {
        int id PK
        int location_id FK
        string name
        string description
        boolean is_active
        boolean is_hidden
        datetime created_at
        datetime updated_at
    }

    ITEM {
        int id PK
        int category_id FK
        string name
        decimal price
        string barcode
        int quantity
        datetime last_inventory_update
        boolean is_active
        boolean is_hidden
        datetime created_at
        datetime updated_at
    }

    ORDER {
        int id PK
        int store_id FK
        int location_id FK
        int user_id FK
        int employee_id FK
        datetime order_date
        string status
        decimal total_amount
        string payment_status
        datetime created_at
        datetime updated_at
    }

    ORDER_ITEM {
        int id PK
        int order_id FK
        int item_id FK
        int quantity
        decimal unit_price
        decimal subtotal
        datetime created_at
        datetime updated_at
    }